core/codegen/tests/ui-fail-stable/from_form_type_errors.stderr
error[E0277]: the trait bound `Unknown: rocket::request::FromFormValue<'_>` is not satisfied
 --> $DIR/from_form_type_errors.rs:7:5
  |
7 |     field: Unknown,
  |     ^^^^^ the trait `rocket::request::FromFormValue<'_>` is not implemented for `Unknown`

error[E0277]: the trait bound `Foo<usize>: rocket::request::FromFormValue<'_>` is not satisfied
  --> $DIR/from_form_type_errors.rs:14:5
   |
14 |     field: Foo<usize>,
   |     ^^^^^ the trait `rocket::request::FromFormValue<'_>` is not implemented for `Foo<usize>`
